<resources>
    <string name="app_name">GestorProductos</string>
    <string name="h1">Gestor Productos</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tvAddTitle">Añadir Producto</string>
    <string name="tvAddNombreP">Nombre</string>
    <string name="tvAddPrecioP">Precio</string>
    <string name="tvAddAddP">Añadir</string>
    <string name="tvAddCancelP">Cancelar</string>
    <string name="tvEdititle">Editar Producto</string>
    <string name="tvEditNombreP">Nombre</string>
    <string name="tvEditPrecioP">Precio</string>
    <string name="tvEditAddP">Editar</string>
    <string name="tvEditCancelP">Cancelar</string>
</resources>